style(header): fix spacing between logo and menu items

--- a/src/components/Header/header.module.less
+++ b/src/components/Header/header.module.less
@@ -13,20 +13,15 @@
   background-color: #FFF;
 
   .logoAndMenu{
-    width: 85%;
+    width: inherit;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
-    // Logo
-    > :first-child {
-      min-width: 30%;
-    }
+    justify-content: space-around;
 
     // Menu
     > :last-child {
-      max-width: 70%;
+      width: 1093px;
     }
   }
 }
